# quli

./: .gitignore  README.md  pyproject.toml
src/quli/: __init__.py  cli.py  config.py  engine.py  generator.py  models.py  streamlit_app.py
src/quli/modes/: __init__.py  batch.py  interactive.py
src/quli/ui/: __init__.py  display.py  input.py
src/quli/ui/streamlit/: config.py  question.py  results.py  utils.py
src/quli/utils/: __init__.py  selection.py
src/quli_quiz/: __init__.py
src/quli_quiz/api/: database.py  main.py  models.py  routes.py  schemas.py
tests/: test_api.py  test_engine.py  test_models.py
